# aiidalab-qe-hp

./: .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
aiidalab_qe_hp/: __init__.py  result.py  setting.py  widget.py  workchain.py
aiidalab_qe_hp/workflows/: __init__.py
docs/: environment.yml  requirements.txt
docs/source/: conf.py  hp.rst  index.rst  installation.rst  quickstart.rst
src/aiidalab_qe_hp/: __init__.py  model.py  resources.py  setting.py  workchain.py
src/aiidalab_qe_hp/result/: __init__.py  model.py  result.py
tests/: conftest.py  notebook.ipynb  test_app.py  test_setting.py  test_workchain.py
